2002-12-11  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (new_game): Ensure that the current map is known when
	a game starts. Patch from Jeremy Browne
	<gnome-bugzilla@synonymous.ca>, fixing #99164.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* mahjongg.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* mahjongg.c (confirm action): Changes to restart / new game dialog for
	consistency with other parts of gnome-games package. (Bug #97321)

2002-10-31  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Use correct GConf install rules.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (you_won): Fix a silly logic bug. Fixes #92823.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* mahjongg.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-08-18  Andrew Sobala <andrew@sobala.net>

	* mahjongg.c: Use the stock icons for the Quit dialog, fixing
	#73031.

2002-07-07  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (shuffle_tiles_callback): Pressing the OK button
	actually closes the dialog now. (from sams@e-sa.com, fixing
	#84199).

2002-07-04  Ross Burton  <ross@burtonini.com>

	* mahjongg.c: Created a new function gconf_sanity_check() which
	checks that a known key is valid. If this looks good, I'll add it
	to all of the GConf-based games. (yes, I am getting lots of bugs
	which end up as "the schemas are not installed")

2002-06-24  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (mapset_changed_cb): Tell the dialog that it has a
	parent.

2002-06-05  Bastien Nocera  <hadess@hadess.net>
