@@ -16,7 +16,7 @@
      <version identifier="2.0" date="2002-05-05" description="Updated to full OMF format"/>
      <subject category="GNOME|Games"/>
      <description>
-    Gnome Mahjongg, or Mahjongg for short, is a solitaire (one player) version of the classic Eastern tile game, Mahjongg.
+    GNOME Mahjongg, or Mahjongg for short, is a solitaire (one player) version of the classic Eastern tile game, Mahjongg.
    </description>
      <type>
      user's guide
